--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node-dev --respawn --clear src/app.ts",
+    "dev": "ts-node-dev --respawn --clear --poll --watch src src/app.ts",
     "build": "rimraf ./dist && tsc && npm run prisma:migrate:prod",
     "start": "node dist/app.js",
     "prisma:migrate:prod": "prisma migrate deploy"
@@ -11,7 +11,7 @@
   "keywords": [],
   "author": "Juan Luis Fernández",
   "license": "ISC",
-  "description": "Project with TypeScript, Prisma and Express",
+  "description": "Template Node.js with Prisma, Express, Postgres and TypeScript",
   "devDependencies": {
     "@types/node": "^24.0.0",
     "prisma": "^6.9.0",
@@ -21,6 +21,9 @@
   },
   "dependencies": {
     "@prisma/client": "^6.9.0",
+    "@types/express": "^5.0.3",
+    "dotenv": "^16.5.0",
+    "env-var": "^7.5.0",
     "express": "^5.1.0"
   }
 }
